--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -10,3 +10,7 @@ input.hide-number-increment::-webkit-inner-spin-button {
   font-size: 12px;
   margin-top: 3px;
 }
+
+.Toastify {
+  z-index: 999999999;
+}
