working on script page

--- a/src/components/Input/Input.scss
+++ b/src/components/Input/Input.scss
@@ -5,6 +5,7 @@
       display: flex;
       align-items: center;
       position: relative;
+      border-radius: 7px;
       border-color: colorMapper(grayclr, 200);
       legend {
         position: absolute;
