--- a/src/components/ProgressIndicator/ProgressIndicator.scss
+++ b/src/components/ProgressIndicator/ProgressIndicator.scss
@@ -1,33 +1,34 @@
-
-.progress-section {
-  width: 100%;
-  max-width: 65vw;
-  background: #ffffff;
-  border-radius: 7px;
-
-  .progress {
+@each $color in $colorType {
+  .progress-section.#{$color} {
     width: 100%;
-    -webkit-appearance: none;
-    appearance: none;
-    border: none;
-    border-radius: 10px;
-    height: 5px;
-    vertical-align: middle;
-  }
+    max-width: 65vw;
+    background: #ffffff;
+    border-radius: 7px;
 
-  .progress::-webkit-progress-bar {
-    background-color: #f0f0f0;
-  }
+    .progress {
+      width: 100%;
+      -webkit-appearance: none;
+      appearance: none;
+      border: none;
+      border-radius: 10px;
+      height: 5px;
+      vertical-align: middle;
+    }
 
-  .progress::-webkit-progress-bar,
-  .progress::-webkit-progress-value {
-    border-radius: 10px;
-  }
+    .progress::-webkit-progress-bar {
+      background-color: #f0f0f0;
+    }
 
-  .progress::-moz-progress-bar {
-    border-radius: 10px;
-  }
-  .progress3::-webkit-progress-value {
-    background: #16a571;
+    .progress::-webkit-progress-bar,
+    .progress::-webkit-progress-value {
+      border-radius: 10px;
+    }
+
+    .progress::-moz-progress-bar {
+      border-radius: 10px;
+    }
+    .progress3::-webkit-progress-value {
+      background: colorMapper($color, main);
+    }
   }
 }
