--- a/src/container/layout/Layout/Layout.scss
+++ b/src/container/layout/Layout/Layout.scss
@@ -30,7 +30,7 @@
       margin-left: 80px;
       transition: all 0.3s ease-in-out;
       .topbar-container {
-        width: calc(100% - 80px);
+        // width: calc(100% - 80px);
         transition: all 0.3s ease-in-out;
       }
       .layout-right-section-menu {
