--- a/src/container/layout/Layout/Layout.scss
+++ b/src/container/layout/Layout/Layout.scss
@@ -11,6 +11,8 @@
     padding: 40px 80px;
     width: calc(100% - 240px);
     margin-left: 240px;
+    position: relative;
+    height: 100%;
   }
 
   &:has(.sidebar-container):not(:has(.collapsed)) :not(:has(.minimized)) {
