--- a/src/styles/themes/muiTheme.scss
+++ b/src/styles/themes/muiTheme.scss
@@ -1,8 +1,8 @@
 $muiTheme: (
   primary: (
-    main: #16a571,
+    main: #5543E8,
     light: #ebf5ff,
-    dark: #164343,
+    dark: #4434C9,
     contrastText: #fff,
   ),
   secondary: (
