--- a/src/container/sites/components/RecommendationOverview/RecommendationOverview.scss
+++ b/src/container/sites/components/RecommendationOverview/RecommendationOverview.scss
@@ -4,10 +4,19 @@
     border-radius: 4px;
     cursor: pointer;
     &:hover {
-      box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.2);
+      .body-text {
+        color: white;
+      }
+      background-color: colorMapper(primary, main);
+    }
+    &.active {
+      background-color: colorMapper(primary, main);
+      .body-text {
+        color: white;
+      }
     }
   }
-  .btn{
+  .btn {
     margin-top: 16px;
   }
 }
