--- a/src/styles/themes/muiTheme.scss
+++ b/src/styles/themes/muiTheme.scss
@@ -1,8 +1,8 @@
 $muiTheme: (
   primary: (
-    main: #5543E8,
+    main: #5543e8,
     light: #ebf5ff,
-    dark: #4434C9,
+    dark: #4434c9,
     contrastText: #fff,
   ),
   secondary: (
@@ -38,8 +38,8 @@ $muiTheme: (
   common: (
     main: #000,
     light: lightgray,
-    "black": #000,
-    "white": #fff,
+    'black': #000,
+    'white': #fff,
     contrastText: #fff,
   ),
   grayClr: (
