--- a/src/components/PlanCard/PlanCard.scss
+++ b/src/components/PlanCard/PlanCard.scss
@@ -1,9 +1,12 @@
 .plan-card {
   min-width: 270px;
-  background-color: white;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+
+  sup{
+    color:var(--color-common-main)
+  }
 
   .btn{
     margin-top: 70px;
