--- a/src/styles/themes/muiTheme.scss
+++ b/src/styles/themes/muiTheme.scss
@@ -43,6 +43,12 @@ $muiTheme: (
     contrastText: #fff,
   ),
   grayClr: (
+    dark-border: '#313131',
+    light-border: '#f0f0f0',
+    dark-background: '#141414',
+    dark-text-color: '#D3D3D3',
+    light-text-color: '#000000E0',
+    light-background: 'white',
     50: #fafafa,
     100: #f5f5f5,
     200: #eeeeee,
