--- a/src/components/Accordion/Accordion.scss
+++ b/src/components/Accordion/Accordion.scss
@@ -9,9 +9,9 @@
 
     .accordion-container-header {
       cursor: pointer;
-      padding: 12px 16px;
-      background: colorMapper($color, light);
       display: flex;
+      padding: 12px 16px;
+      color: var(--color-common-main);
       align-items: center;
       justify-content: space-between;
     }
@@ -19,15 +19,16 @@
     .header-title {
       font-weight: 500;
       font-size: 1rem;
-			width: 100%;
+      width: 100%;
     }
 
     .header-icon {
       position: relative;
-      width: 13px;
-      height: 13px;
-      background: url("@/assets/icons/arrow_icon.svg") no-repeat;
-      background-size: cover;
+      svg {
+        width: 13px;
+        height: 13px;
+        fill:var(--color-common-main)
+      }
       transition: transform 0.3s linear;
     }
 
@@ -41,6 +42,7 @@
 
     &.open {
       .header-icon {
+        transform-origin: center;
         transition: transform 0.3s linear;
         transform: rotate(-180deg);
       }
