--- a/src/components/CircularProgress/CircularProgress.scss
+++ b/src/components/CircularProgress/CircularProgress.scss
@@ -12,7 +12,7 @@
     width: calc(var(--size) * 0.9);
     height: calc(var(--size) * 0.9);
     border-radius: 50%;
-    background-color: white;
+    background-color: var(--background-color);
     position: absolute;
     top: 50%;
     left: 50%;
@@ -25,6 +25,7 @@
     position: absolute;
     top: 50%;
     left: 50%;
+    color:var(--color-common-main);
     transform: translate(-50%, -50%);
     font-size: calc(var(--size) * 0.3);
   }
