--- a/src/components/Table/Table.scss
+++ b/src/components/Table/Table.scss
@@ -16,9 +16,6 @@
           width: 30px;
           height: 14px;
           position: relative;
-          // top: 50%;
-          // right: 14px;
-          // transform: translateY(-50%);
 
           &::before {
             content: '';
@@ -59,7 +56,11 @@
     vertical-align: middle;
     padding: 10px 14px;
     position: relative;
-    border-bottom: 1px solid #f0f0f0;
+    border-bottom: 1px solid var(--border-color);
+    color:var(--color-common-main);
+    svg{
+      stroke:var(--color-common-main);;
+    }
 
     &.center {
       text-align: center;
@@ -75,7 +76,7 @@
     width: 70px;
     min-width: 70px;
     position: relative;
-    border-bottom: 1px solid #f0f0f0;
+    border-bottom: 1px solid var(--border-color);
   }
 }
 
