--- a/src/container/layout/components/Menu/Menu.scss
+++ b/src/container/layout/components/Menu/Menu.scss
@@ -19,7 +19,6 @@
   left: 240px;
 
   &.nested-list {
-    background: rgb(146 228 255 / 83%);
     position: relative;
     padding: 16px 0px;
     min-width: calc(240px - 32px);
@@ -34,27 +33,24 @@
   left: 80px;
 }
 
-
 .submenu-heading,
 .menu-link,
 .submenu-list-link {
   padding: 8px;
   padding-left: 16px;
   &:hover {
-    background: #5543E8;
+    background: colorMapper(primary, main);
+    color:white;
   }
-}
-
-.submenu-heading.open {
-  background: lightblue;
 }
 
 .submenu-heading,
 .menu-link {
   &-title {
-    transition: all 0.3s ease-in-out;
+    transition: margin-left 0.3s ease-in-out;
     vertical-align: middle;
     margin-left: 0px;
+    color: var(--color-common-main);
   }
   img {
     height: 1em;
@@ -73,6 +69,8 @@
     svg {
       height: 1.2em;
       width: 1.2em;
+      fill: var(--color-common-main);
+      stroke: var(--color-common-main);
     }
   }
 }
@@ -84,13 +82,13 @@
 
 .sidebar-container:not(.collapsed) .submenu-heading {
   &-title {
-    transition: all 0.5s ease-in-out;
+    transition: margin-left 0.5s ease-in-out;
   }
 }
 
 .sidebar-container:not(.collapsed) .menu-link {
   &-title {
-    transition: all 0.5s ease-in-out;
+    transition: margin-left 0.5s ease-in-out;
   }
 }
 
@@ -139,31 +137,20 @@
 .dropdown-arrow {
   right: 10px;
   position: absolute;
-  width: 13px;
-  height: 13px;
   top: 50%;
   transform: translateY(-50%);
-}
-
-.menu .submenu-heading .dropdown-arrow {
-  &::before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background: url("@/assets/icons/arrow_icon.svg") no-repeat;
-    background-size: cover;
-    transition: transform 0.3s ease-in-out;
+  transform-origin: center;
+  svg {
+    width: 13px;
+    height: 13px;
+    fill: var(--color-common-main);
   }
 }
 
-.menu .submenu-heading.active .dropdown-arrow {
-  &::before {
-    filter: brightness(0) invert(1) brightness(100);
-  }
+.menu .dropdown-arrow {
+  transition: transform 0.3s ease-in-out;
 }
+
 .menu .submenu-heading.active {
   .menu-icon {
     svg {
@@ -175,67 +162,40 @@
       }
     }
   }
+  .dropdown-arrow {
+    svg {
+      fill: white;
+    }
+  }
+  .submenu-heading-title {
+    color: white;
+  }
 }
 
 .menu .submenu-heading.open .dropdown-arrow {
-  &::before {
-    transition: transform 0.3s ease-in-out;
-    transform: rotate(-90deg);
-  }
+  transform-origin: center;
+  transition: transform 0.3s ease-in-out;
+  transform: translateY(-50%) rotate(-90deg);
 }
 
 .collapsed .menu .submenu-heading .dropdown-arrow {
-  &::before {
-    display: none;
-  }
+  display: none;
 }
 
 .collapsed .nested-submenu .submenu-heading .dropdown-arrow {
-  &::before {
-    display: inline-block;
-  }
-}
-
-.nested-submenu .submenu-heading .dropdown-arrow {
-  &::before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background: url("@/assets/icons/arrow_icon.svg") no-repeat;
-    background-size: cover;
-    transition: transform 0.3s ease-in-out;
-  }
+  display: inline-block;
 }
 
 .nested-submenu .submenu-heading.open .dropdown-arrow {
-  &::before {
-    transition: transform 0.3s ease-in-out;
-    transform: rotate(-180deg);
-  }
-}
-
-.collapsed .nested-submenu .submenu-heading .dropdown-arrow {
-  &::before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background: url("@/assets/icons/arrow_icon.svg") no-repeat;
-    background-size: cover;
-    transition: transform 0.3s ease-in-out;
-  }
+  transform-origin: center;
+  transition: transform 0.3s ease-in-out;
+  transform: translateY(-50%) rotate(-180deg);
 }
 
 .collapsed .nested-submenu .submenu-heading.open .dropdown-arrow {
-  &::before {
-    transition: transform 0.3s ease-in-out;
-    transform: rotate(-135deg);
-  }
+  transform-origin: center;
+  transition: transform 0.3s ease-in-out;
+  transform: translateY(-50%) rotate(-135deg);
 }
 
 .no-pointer {
