modal background color updated

--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -21,7 +21,7 @@
     }
 
     .modal {
-        background: white;
+        background: var(--background-color);
         min-width: 350px;
         max-width: 90%;
         height: auto;
