--- a/src/container/layout/components/Sidebar/Sidebar.scss
+++ b/src/container/layout/components/Sidebar/Sidebar.scss
@@ -4,7 +4,10 @@
   height: calc(100% - 80px);
   margin-top: 80px;
   padding: 24px 16px;
-  transition: width, min-width 0.3s ease-in-out;
+  border-radius: 0px !important;
+  transition:
+    width,
+    min-width 0.3s ease-in-out;
   position: fixed;
   left: 0;
   white-space: nowrap;
@@ -24,10 +27,10 @@
   }
 
   &.minimized {
-    display:none;
+    display: none;
   }
 
-  &.overlay{
+  &.overlay {
     display: block;
     z-index: 99999;
     margin-top: 80px;
