--- a/src/container/layout/components/TopBar/TopBar.scss
+++ b/src/container/layout/components/TopBar/TopBar.scss
@@ -9,6 +9,7 @@
   top: 0px;
   right: 0px;
   z-index: 9999999;
+  border-radius: 0px !important;
 }
 
 .humbarger-icon {
@@ -27,7 +28,7 @@
   }
 }
 
-.topbar-content{
+.topbar-content {
   width: 100%;
   padding: 0px 60px;
 }
