dropdown menu hover effect updated

--- a/src/components/Dropdown/Dropdown.scss
+++ b/src/components/Dropdown/Dropdown.scss
@@ -35,6 +35,9 @@
       &:hover {
         background-color: colorMapper(primary, main);
       }
+      &:hover .body-text {
+        color: white;
+      }
     }
   }
 }
