--- a/src/components/Accordion/Accordion.scss
+++ b/src/components/Accordion/Accordion.scss
@@ -1,6 +1,6 @@
 @each $color in $colorType {
   .accordion-container.#{$color} {
-    box-shadow: colorMapper(grayclr, 200) 0px 8px 24px;
+    box-shadow: colorMapper(grayClr, 200) 0px 8px 24px;
     border: 1px solid colorMapper($color, light);
     width: 100%;
     height: 100%;
