--- a/src/components/Container/Container.scss
+++ b/src/components/Container/Container.scss
@@ -4,9 +4,9 @@
     border-radius: 4px;
   }
 
-  &.boxShadow {
-    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.06);
-  }
+  // &.boxShadow {
+  //   box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.06);
+  // }
 
   &.transparent {
     background-color: transparent;
