--- a/src/components/TextArea/TextArea.scss
+++ b/src/components/TextArea/TextArea.scss
@@ -1,176 +1,16 @@
 .textarea-field-container {
   line-height: 1.7;
+  position: relative;
+
   @each $color in $colorType {
-    .textarea-fieldset.#{$color} {
-      display: inline-flex;
-      align-items: center;
-      position: relative;
-      border-radius: 7px;
-      border-color: colorMapper(grayclr, 200);
-      legend {
-        position: absolute;
-        background: transparent;
-        top: 50%;
-        transform: translateY(-50%) translateX(14px);
-        font-weight: 400;
-        line-height: 12px;
-        font-size: 16px;
-        letter-spacing: 0.15px;
-        z-index: 2;
-        color: colorMapper(grayclr, 900);
-        transition: all 0.1s ease-in-out;
+    &.#{$color} {
+      label {
+        display: inline-block;
+        margin-bottom: 4px;
+        position: relative;
       }
 
-      svg path {
-        fill: colorMapper($color, main);
-        stroke: colorMapper($color, main);
-      }
-      svg circle {
-        stroke: colorMapper($color, main);
-      }
-
-      textarea {
-        line-height: 1.7;
-        width: 100%;
-        height: 100%;
-        border: none;
-        outline: none;
-        resize: both;
-        background: transparent;
-        &::placeholder {
-          transition: all 0.1s ease-in-out;
-          color: colorMapper(grayclr, 500);
-        }
-      }
-
-      .input-icon {
-        padding: 0px 14px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        img {
-          height: 1em;
-          width: 1em;
-        }
-      }
-
-      &.sm {
-        font-size: 0.8125rem;
-
-        textarea {
-          padding: 4px 10px;
-        }
-
-        img {
-          height: 1.5em;
-          width: 1.5em;
-        }
-
-        legend {
-          font-size: 1em;
-        }
-      }
-
-      &.md {
-        font-size: 0.875rem;
-        textarea {
-          padding: 6px 16px;
-        }
-        img {
-          height: 1.5em;
-          width: 1.5em;
-        }
-
-        legend {
-          font-size: 1em;
-        }
-      }
-
-      &.lg {
-        font-size: 0.9375rem;
-        textarea {
-          padding: 8px 22px;
-        }
-        img {
-          height: 1.5em;
-          width: 1.5em;
-        }
-
-        legend {
-          font-size: 1em;
-        }
-      }
-
-      &.focused:not(.top) {
-        legend {
-          transition: all 0.1s ease-in-out;
-          top: 0%;
-          transform: translateY(-70%) translateX(5px);
-          background: colorMapper(common, 'white');
-          font-size: 12px;
-          padding: 0px 4px;
-          color: colorMapper($color, main);
-        }
-      }
-
-      &:not(.top):not(.focused):has(legend) {
-        textarea ::placeholder {
-          transition: all 0.1s ease-in-out;
-          color: transparent;
-        }
-      }
-
-      &.outlined.focused {
-        border-color: colorMapper($color, main); //color
-      }
-
-      &.outlined:hover {
-        border-color: colorMapper(grayclr, 400);
-      }
-
-      &.outlined.focused:hover {
-        border-color: colorMapper($color, main); //color
-      }
-
-      $margin-left: calc(28px + 1em);
-
-      &.startIcon {
-        padding-left: 10px;
-        textarea {
-          padding-left: 10px;
-        }
-        legend {
-          transform: translateY(-50%) translateX($margin-left);
-        }
-      }
-
-      &.endIcon {
-        padding-right: 10px;
-        textarea {
-          padding-right: 10px;
-        }
-      }
-
-      &.top {
-        legend {
-          display: none;
-        }
-      }
-
-      &.error.focused {
-        border-color: colorMapper(error, main);
-        legend {
-          color: colorMapper(error, main);
-        }
-      }
-      &.error:hover {
-        border-color: colorMapper(error, main);
-      }
-      &.error.focused:hover {
-        border-color: colorMapper(error, main);
-      }
-
-      &.required legend::after {
+      &.required label::after {
         content: '*';
         color: colorMapper(warning, main);
         position: absolute;
@@ -178,98 +18,82 @@
         font-size: 20px;
       }
 
-      &.required.focused legend::after {
-        right: 0px;
-      }
+      textarea {
+        display: inline-flex;
+        align-items: center;
+        position: relative;
+        border: 1px solid colorMapper($color, main);
+        line-height: 1.7;
+        width: 100%;
+        height: 100%;
+        min-height: 80px;
+        outline: none;
+        background: transparent;
+        resize: both;
+        padding: 6px 16px;
 
-      &.required.focused {
-        legend {
-          padding-right: 12px;
+        &::placeholder {
+          transition: all 0.1s ease-in-out;
+          color: colorMapper(grayClr, 500);
+        }
+
+        &:focus {
+          border-color: colorMapper($color, main);
+        }
+
+        &:disabled {
+          background: colorMapper(grayClr, 300);
+        }
+
+        &:disabled:hover {
+          border-color: colorMapper(grayClr, 100);
         }
       }
 
-      &.underlined {
-        border-top: none;
-        border-left: none;
-        border-right: none;
-        textarea {
-          padding-bottom: 4px;
-          padding-left: 0px;
-        }
-        legend {
-          transform: translateY(-50%) translateX(0px);
-        }
-      }
-
-      &.underlined.focused {
+      &.focused textarea {
         border-color: colorMapper($color, main);
-        legend {
-          transform: translateY(-50%) translateX(0px);
-          padding-left: 0px;
-          color: colorMapper($color, main);
-        }
       }
 
-      &.radius {
+      &.error textarea {
+        border-color: colorMapper(error, main);
+      }
+
+      &.sm textarea {
+        font-size: 0.8125rem;
+        padding: 4px 10px;
+      }
+
+      &.md textarea {
+        font-size: 0.875rem;
+        padding: 6px 16px;
+      }
+
+      &.lg textarea {
+        font-size: 0.9375rem;
+        padding: 8px 22px;
+      }
+
+      &.radius textarea {
         border-radius: 4px;
       }
-
-      &:has(:not(legend)) {
-        textarea ::placeholder {
-          color: colorMapper(grayclr, 500);
-        }
-      }
-
-      &:disabled {
-        background: colorMapper(grayclr, 300);
-
-        legend {
-          color: colorMapper(grayclr, 500);
-        }
-      }
-
-      &:disabled:hover {
-        border-color: colorMapper(grayclr, 100);
-      }
     }
   }
 
-  label {
-    display: inline-block;
-    margin-bottom: 4px;
-    position: relative;
-  }
-
-  &:has(.required) label::after {
-    content: '*';
-    color: colorMapper(warning, main);
-    position: absolute;
-    right: -15px;
-    font-size: 20px;
-  }
-
-  .hide-number-increment {
-    textarea ::-webkit-outer-spin-button,
-    textarea ::-webkit-inner-spin-button {
-      -webkit-appearance: none;
-      margin: 0;
-    }
+  .error-text {
+    color: colorMapper(error, main);
+    font-size: 0.875rem;
+    margin-top: 4px;
   }
 }
 
 @media screen and (max-width: 570px) {
   .textarea-field-container {
-    .textarea-fieldset {
+    textarea {
       font-size: 0.8125rem !important;
-      img,
-      svg {
-        height: 1.5em !important;
-        width: 1.5em !important;
-      }
+    }
 
-      legend {
-        font-size: 1em !important;
-      }
+    label {
+      font-size: 1em !important;
     }
   }
 }
