--- a/src/container/layout/components/TopBar/TopBar.scss
+++ b/src/container/layout/components/TopBar/TopBar.scss
@@ -24,7 +24,7 @@
     transition: width 0.3s ease-in-out;
     width: 100%;
     height: 2px;
-    background: colorMapper(grayclr, 600);
+    background: colorMapper(grayClr, 600);
   }
 }
 
