--- a/src/container/layout/pages/Page404/Page404.scss
+++ b/src/container/layout/pages/Page404/Page404.scss
@@ -13,13 +13,13 @@
     .title {
       font-size: 5vw;
       font-weight: 600;
-      color: colorMapper(grayclr, 700);
+      color: colorMapper(grayClr, 700);
     }
 
     .description-404 {
       font-weight: 400;
       font-size: 2vw;
-      color: colorMapper(grayclr, 500);
+      color: colorMapper(grayClr, 500);
     }
   }
 
@@ -33,7 +33,7 @@
   }
 
   .redirection-guide {
-    color: colorMapper(grayclr, 500);
+    color: colorMapper(grayClr, 500);
     font-size: 1vw;
 
     a {
