--- a/src/container/layout/pages/UnAuthorized/UnAuthorized.scss
+++ b/src/container/layout/pages/UnAuthorized/UnAuthorized.scss
@@ -23,7 +23,7 @@
     .description-401 {
       font-weight: 400;
       font-size: 2vw;
-      color: colorMapper(grayclr, 500);
+      color: colorMapper(grayClr, 500);
     }
   }
 
@@ -37,7 +37,7 @@
   }
 
   .redirection-guide {
-    color: colorMapper(grayclr, 500);
+    color: colorMapper(grayClr, 500);
     font-size: 1vw;
 
     a {
